
	* src/SDCCmem.c (allocGlobal, allocLocal): added check if bit space exists
	* src/SDCCsymt.c (computeType): fixed bug 3531687
	* src/SDCCast.c,
	* src/SDCCicode.c,
	* src/SDCCsymt.h: renamed RESULT_TYPE_BIT to RESULT_TYPE_BOOL
	* support/regression/tests/bug3531687.c: reinserted char > bool test
	* support/regression/tests/bug3537338.c: use _STATMEM for more coverage

2012-07-20 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCClospre.hpp (implement_lospre_assignment): explicitly ignore
	  vertices created from newly split edges
	* src/SDCCopt.c (eBBlockFromiCode): reenable lospre

2012-07-19 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCicode.c (geniCodeAdd): fixed bug 3537338
	* src/ds390/gen.c (genMultOneByte): handle long result for pointer offsets
	* src/mcs51/gen.c (genLeftShiftLiteral, genRightShiftLiteral),
	* src/z80/gen.c (genLeftShiftLiteral): added wassert
	* support/regression/tests/bug3537338.c: new, added

2012-07-17 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCopt.c: temporarily disable lospre until I can figure out
	  why it's failing on some hosts.

2012-07-15 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdcc.sln: sdcdb depends on config
	* all.vcxproj: excluded copy to bin\ from debug build as it seems to mess up
	  the dependencies
	* all.vcxproj.filters: added sdasrab.exe
	* src/sdcc.vcxproj.filters,
	* src/sdcc.vcxproj: removed SDCC.y dependency from lexing
	  added version.h to Header Files
	  added SDCClospre.cc and SDCClospre.hpp
	* config.vcxproj,
	* src/yacc.vcxproj: updated all custom build commands and dependencies
	* src/SDCCast.c (decorateType, '='): fixed lost linenumber in bug 3540054
	* src/SDCCsymt.c (dbuf_printTypeChain): removed 'd'
	* sdas/asrab/rabbitmch.c (machine): removed const to fix prototype conflict
	* src/SDCClospre.cc (lospre): fixed warning
	* src/SDCCutil.h,
	* src/SDCCutil.c (processStrSet): fix warning by using explicit function ptr
